# microcenter-product-watcher

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  TESTING.md  backup.sh  docker-compose.yml  k8s-deployment.yaml  k8s-pvc.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ruff.yml
stock_checker/: __init__.py  bot.py  config.py  database.py  monitor.py
tests/: test_database.py  test_notification.py
